--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 		background-color: skyblue;
 		text-align: center;
 		color: white;
+		border-color: rgba(0, 0, 0, 0.1);
 	}
 	input{
 		padding: 5%;
 		width: 90%;
 		color: rgba(0, 0, 0, 0.2);
+		border-color: rgba(0, 0, 0, 0.1);
 
 	}
 	.main{
@@ -98,7 +100,7 @@
 		</div>
 	<div>
 		<div class="input">
-			<h1>instagram</h1>
+			<h1>Instagram</h1>
 			<P><input type="text" placeholder="phone number,username,or email"></P>
 			<P><input type="password" placeholder="password"></P>
 			<P><button>Log in</button><P>
